# apex-trading

./: .env.template  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/dashboard/: index.html
docs/journal/: 2026-03-03.qmd  2026-03-04.qmd
docs/paper/: index.qmd
src/: config.py
src/agent/: brain.py  executor.py  loop.py
src/backtest/: combined.py  run.py  train_lgbm.py
src/dashboard/: app.py
src/data/: market.py  schema.py
src/kalshi/: apex_agent.py  brain.py  btc_direction.py  crypto_risk.py  crypto_scalper.py  feedback_loop.py  kalshi_client.py  kelly.py  longshot_fade.py  market_intel.py  parlay_engine.py  position_exit.py  sheets_logger.py  telegram_notify.py  weather_arb.py  weather_strategy.py
src/polymarket/: negrisk_scanner.py  polymarket_client.py
src/strategy/: features.py  mean_reversion.py  momentum.py
tests/agent/: test_brain.py
tests/data/: test_schema.py
tests/kalshi/: test_crypto_exit_and_scalper.py  test_kelly.py
tests/strategy/: test_features.py  test_momentum.py
